[package]
name = "collatz"
version = "0.3.0"
edition = "2021"
authors = ["Rodolfo Mói de Oliveira <rodmoi.oliveira@gmail.com>"]
description = """
Prints the hailstone sequence of a number"""
documentation = "https://github.com/rodmoioliveira/collatz"
homepage = "https://github.com/rodmoioliveira/collatz"
repository = "https://github.com/rodmoioliveira/collatz"
license = "Unlicense OR MIT"
build = "build.rs"
readme = "README.md"

[[bin]]
name = "collatz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env", "cargo", "help"] }
clap_complete = "4.4.9"
libc = "0.2.152"
num = { version = "0.4.1", features = ["num-bigint"] }

[build-dependencies]
chrono = "0.4.33"
