[package]
name = "collatz"
version = "0.4.0"
authors = ["Rodolfo Mói de Oliveira <rodmoi.oliveira@gmail.com>"]
build = "build.rs"
documentation = "https://github.com/rodmoioliveira/collatz"
edition = "2021"
homepage = "https://github.com/rodmoioliveira/collatz"
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rodmoioliveira/collatz"
description = """
Prints the hailstone sequence of a number"""

[[bin]]
name = "collatz"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.43", features = ["derive", "env", "cargo", "help"] }
clap_complete = "4.5.56"
libc = "0.2.175"
num = { version = "0.4.3", features = ["num-bigint"] }

[build-dependencies]
chrono = "0.4.41"
